Enhance unit tests for various services by adding detailed assertions and mock data for AsylumDecisionService, AsylumRequestService, DashboardSummaryService, IdpDisplacementService, IdpReturneesService, RefugeeNaturalizationService, and ResettlementSummaryService.