@@ -1,10 +1,11 @@
 package com.beyondfootsteps.beyondfootsteps.services;
 
-import java.util.Collections;
 import java.util.List;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -31,9 +32,30 @@ class AsylumRequestServiceTest {
 
     @Test
     void shouldFindAllAndReturnList() {
-        when(asylumRequestRepository.findAll()).thenReturn(Collections.emptyList());
+        AsylumRequest request = new AsylumRequest();
+        request.setId("test-id");
+        request.setYear(2025);
+        request.setCountryOfOriginIso("AFG");
+        request.setCountryOfOrigin("Afghanistan");
+        request.setCountryOfAsylumIso("ESP");
+        request.setCountryOfAsylum("Spain");
+        request.setAppPc(true);
+        request.setAppliedPer100k(12.5f);
+        request.setApplied(100);
+
+        when(asylumRequestRepository.findAll()).thenReturn(List.of(request));
         List<AsylumRequest> result = asylumRequestService.findAll();
         assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals("test-id", result.get(0).getId());
+        assertEquals(2025, result.get(0).getYear());
+        assertEquals("AFG", result.get(0).getCountryOfOriginIso());
+        assertEquals("Afghanistan", result.get(0).getCountryOfOrigin());
+        assertEquals("ESP", result.get(0).getCountryOfAsylumIso());
+        assertEquals("Spain", result.get(0).getCountryOfAsylum());
+        assertTrue(result.get(0).getAppPc());
+        assertEquals(12.5f, result.get(0).getAppliedPer100k());
+        assertEquals(100, result.get(0).getApplied());
     }
 
     @ParameterizedTest
@@ -43,9 +65,30 @@ class AsylumRequestServiceTest {
         "2025, ESP, "
     })
     void shouldFindByYearAndCountry(int year, String originCountry, String asylumCountry) {
-        when(asylumRequestRepository.findByYearAndCountries(year, originCountry, asylumCountry)).thenReturn(Collections.emptyList());
+        AsylumRequest request = new AsylumRequest();
+        request.setId("test-id");
+        request.setYear(year);
+        request.setCountryOfOriginIso(originCountry);
+        request.setCountryOfOrigin("Origin");
+        request.setCountryOfAsylumIso(asylumCountry);
+        request.setCountryOfAsylum("Asylum");
+        request.setAppPc(true);
+        request.setAppliedPer100k(10.0f);
+        request.setApplied(50);
+
+        when(asylumRequestRepository.findByYearAndCountries(year, originCountry, asylumCountry)).thenReturn(List.of(request));
         List<AsylumRequest> result = asylumRequestService.findByYearAndCountry(year, originCountry, asylumCountry);
         assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals("test-id", result.get(0).getId());
+        assertEquals(year, result.get(0).getYear());
+        assertEquals(originCountry, result.get(0).getCountryOfOriginIso());
+        assertEquals("Origin", result.get(0).getCountryOfOrigin());
+        assertEquals(asylumCountry, result.get(0).getCountryOfAsylumIso());
+        assertEquals("Asylum", result.get(0).getCountryOfAsylum());
+        assertTrue(result.get(0).getAppPc());
+        assertEquals(10.0f, result.get(0).getAppliedPer100k());
+        assertEquals(50, result.get(0).getApplied());
     }
 
     @Test
@@ -53,5 +96,6 @@ class AsylumRequestServiceTest {
         InvalidParamException exception = assertThrows(InvalidParamException.class,
                 () -> asylumRequestService.findByYearAndCountry(2025, null, null));
         assertNotNull(exception.getMessage());
+        assertEquals("At least one country must be provided", exception.getMessage());
     }
 }
