@@ -1,8 +1,8 @@
 package com.beyondfootsteps.beyondfootsteps.services;
 
-import java.util.Collections;
 import java.util.List;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -27,9 +27,24 @@ class IdpDisplacementServiceTest {
 
     @Test
     void shouldFindAllAndReturnList() {
-        when(idpDisplacementRepository.findAll()).thenReturn(Collections.emptyList());
+        IdpDisplacement displacement = new IdpDisplacement();
+        displacement.setId("test-id");
+        displacement.setYear(2025);
+        displacement.setCountryOfOrigin("Afghanistan");
+        displacement.setCountryOfOriginIso("AFG");
+        displacement.setTotal(1000);
+        displacement.setDisplacementRatePer100k(12.5f);
+
+        when(idpDisplacementRepository.findAll()).thenReturn(List.of(displacement));
         List<IdpDisplacement> result = idpDisplacementService.findAll();
         assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals("test-id", result.get(0).getId());
+        assertEquals(2025, result.get(0).getYear());
+        assertEquals("Afghanistan", result.get(0).getCountryOfOrigin());
+        assertEquals("AFG", result.get(0).getCountryOfOriginIso());
+        assertEquals(1000, result.get(0).getTotal());
+        assertEquals(12.5f, result.get(0).getDisplacementRatePer100k());
     }
 
 }
