@@ -1,8 +1,9 @@
 package com.beyondfootsteps.beyondfootsteps.services;
 
-import java.util.Collections;
+import java.time.LocalDate;
 import java.util.List;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -10,26 +11,43 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 import org.springframework.boot.test.context.SpringBootTest;
 
-import com.beyondfootsteps.beyondfootsteps.models.IdpDisplacement;
-import com.beyondfootsteps.beyondfootsteps.repositories.IdpDisplacementRepository;
+import com.beyondfootsteps.beyondfootsteps.models.IdpReturnees;
+import com.beyondfootsteps.beyondfootsteps.repositories.IdpReturneesRepository;
 
 @SpringBootTest
 class IdpReturneesServiceTest {
 
-    private IdpDisplacementRepository idpDisplacementRepository;
-    private IdpDisplacementService idpDisplacementService;
+    private IdpReturneesRepository idpReturneesRepository;
+    private IdpReturneesService idpReturneesService;
 
     @BeforeEach
     void setUp() {
-        idpDisplacementRepository = mock(IdpDisplacementRepository.class);
-        idpDisplacementService = new IdpDisplacementService(idpDisplacementRepository);
+        idpReturneesRepository = mock(IdpReturneesRepository.class);
+        idpReturneesService = new IdpReturneesService(idpReturneesRepository);
     }
 
     @Test
     void shouldFindAllAndReturnList() {
-        when(idpDisplacementRepository.findAll()).thenReturn(Collections.emptyList());
-        List<IdpDisplacement> result = idpDisplacementService.findAll();
+        IdpReturnees returnees = new IdpReturnees();
+        returnees.setId("test-id");
+        returnees.setYear(2025);
+        returnees.setCountryOfOriginIso("AFG");
+        returnees.setCountryOfOrigin("Afghanistan");
+        returnees.setIdpReturneesNumber(1000);
+        returnees.setRefugeesReturnees(500);
+        returnees.setByDate(LocalDate.of(2025, 8, 18));
+
+        when(idpReturneesRepository.findAll()).thenReturn(List.of(returnees));
+        List<IdpReturnees> result = idpReturneesService.findAll();
         assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals("test-id", result.get(0).getId());
+        assertEquals(2025, result.get(0).getYear());
+        assertEquals("AFG", result.get(0).getCountryOfOriginIso());
+        assertEquals("Afghanistan", result.get(0).getCountryOfOrigin());
+        assertEquals(1000, result.get(0).getIdpReturneesNumber());
+        assertEquals(500, result.get(0).getRefugeesReturnees());
+        assertEquals(LocalDate.of(2025, 8, 18), result.get(0).getByDate());
     }
 
 }
